# wip-dune-workspace

./: Makefile  dune  dune-workspace
Zarith/: dune  dune-project
duniverse/: Zarith  mirage  mirage-solo5  ocaml-freestanding  ocaml-gmp  ocaml-solo5
duniverse/Zarith/: dune  dune-project  zarith.opam
duniverse/Zarith/config/: discover.ml  dune
duniverse/Zarith/tests/: dune
duniverse/astring.0.8.3+dune/src/: astring_base.ml  astring_char.ml  astring_sub.ml
duniverse/bos.0.2.0+dune/src/: bos_cmd.ml  bos_pat.ml
duniverse/ipaddr.4.0.0/lib/: ipaddr.ml
duniverse/mirage-crypto.0.6.2/src/: dune
duniverse/mirage-solo5/: mirage-solo5.opam
duniverse/mirage-solo5/lib/: dune  mM.ml  main.ml  oS.ml  oS.mli  time.ml
duniverse/mirage/lib/functoria/: DSL.mli  device.ml  device.mli  engine.ml  engine.mli  impl.mli  lib.ml  lib.mli  misc.ml
duniverse/mirage/lib/mirage/: mirage.ml  mirage.mli  mirage_solo5.ml  mirage_solo5.mli  mirage_unix.ml  mirage_xen.mli
duniverse/mirage/test/f0/: f0.ml
duniverse/mirage/test/mirage/query/: opam-hvt.expected  packages-hvt.expected  x-dune-hvt.expected  x-dune-workspace-hvt.expected
duniverse/ocaml-freestanding/: Makefile  build-nolibc.sh  configure-ocaml.sh  dune  ocaml-freestanding.opam
duniverse/ocaml-freestanding/nolibc/: Makefile
duniverse/ocaml-gmp/: build.sh  dune  dune-project
duniverse/ocaml-solo5/: build.ml  dune  dune.inc
ocaml-freestanding/: configure-ocaml.sh  dune  vendor-ocaml.sh
ocaml-gmp/: build.sh  dune
