(rule
  (target cflags-hvt)
; FIXME: create a dependency loop
; (deps (package solo5-hvt) (package ocaml-freestanding))
  (deps %{lib:solo5-hvt:cflags} %{lib:ocaml-freestanding:cflags})
  (action (with-stdout-to %{target} (progn
  (echo "(")
  (cat %{lib:ocaml-freestanding:cflags})
  (cat %{lib:solo5-hvt:cflags})
  (bash "echo \" -I$(realpath $(dirname %{lib:solo5-hvt:cflags}))\"")
  (echo ")")))))
