opam-version: "2.0"
maintainer: [
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Martin Lucina <martin@lucina.net>"
]
authors: "Martin Lucina <martin@lucina.net>"
homepage: "https://github.com/mirage/ocaml-freestanding"
bug-reports: "https://github.com/mirage/ocaml-freestanding/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/mirage/ocaml-freestanding.git"

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "solo5"
  "ocaml" {>="4.08.0"}
]

pin-depends: ["solo5.dev" "git+https://github.com/samoht/ocaml-solo5.git"]

available: [
  ((os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" & arch = "x86_64")
  | (os = "openbsd" & arch = "x86_64"))
]
synopsis: "Freestanding OCaml runtime"
description:"""
This package provides a freestanding OCaml runtime (asmrun), suitable for
linking with a unikernel base layer."""
